--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>estrutura html</title>
 </head>
 <header style="background-color: gray;">
-<h1>Header</h1>
+<h1>HEADER</h1>
 </header>
 <body>
  <nav style="background-color: aquamarine;">
@@ -17,9 +17,11 @@
         <li>Contato</li>
     </ul>
     </nav>
-    <main style="background-color: aqua;"> Ma 
+    <main style="background-color: aqua;"> 
+        <h1>MAIN</h1>
+        <H3>Conteudo do main</H3>
     </main>
-    <aside>
+    <aside style="background-color: antiquewhite;">
     <h1>ASIDE</h1>
     <h4>Conteudo do aside</h4>
     </aside> 
